# Dad-Bot

./: .dad_memory.json.bb0ccd102d6d4e598557b40749e10f18.tmp  .dockerignore  .env.production.example  .env.template  .gitignore  .pylintrc  .pytest_full_run.txt  .pytest_output.txt  .pytest_property_output.txt  .pytest_results.xml  .pytest_run.txt  .pytest_selected_results.xml  .pytest_subset_output.txt  .tmp_capability_audit_output.txt  .tmp_capability_audit_output_2.txt  .tmp_concurrency_50.py  .tmp_concurrency_50_final.py  ARCHITECTURAL_FIX_SKETCH.md  ARCHITECTURE.md  ARCHITECTURE_SIMPLIFICATION.md  CHANGELOG.md  DEVELOPMENT.md  Dad.py  Dockerfile  MOBILE_PWA.md  PHASE1_EXECUTION_TRUTH_FREEZE.md  PHASE4A_ARCHITECTURE_BLUEPRINT.md  PHASE4A_COMPLETION_CHECKLIST.md  PHASE4A_DELIVERY_SUMMARY.md  PHASE4A_ORCHESTRATOR_INTEGRATION.md  PHASE4A_QUICKSTART.md  PHASE4_CRITICAL_FIXES_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETION.md  README.md  SYSTEM_SNAPSHOT_V1.json  SYSTEM_VALIDATION_REPORT.md  _TURN_ENTRYPOINT_INVENTORY.md  _TURN_SPINE_BASELINE.md  _agent_full_cert2.txt  (+171 more)
.github/workflows/: phase4-capability-validation.yml  semantic-pgvector.yml
.streamlit/: config.toml
.tmp/: fastgate.xml
archive/dev-tools/: audit.py  audit_registry.py  audit_runners.py  run_capability_audit.py  run_cert.py  system_repair.py
archive/docs/: PRIMITIVES.md  Phase_4_Goal.md  audit_phase1_response_authority.md  dad_capability_record.md
artifacts/: contract_test_manifest.json  dadbot_2026_compliance_scorecard.json
artifacts/eval/: full_eval_summary.json  openai_evals_rows.jsonl  progress_strict_timeout.jsonl  safe_mode_check.json  stall_diagnostic_progress.jsonl  strict_mode_check.json  strict_mode_check_fresh.json  strict_mode_check_tranche1.json
audit/: architectural_completeness_report.json  architectural_shallow_report.json  baseline_reconciliation_report.json  phase2_2_surface_contract_map.md
audit/spec/: architecture_manifest.json
ci/: __init__.py  adversarial_closure_gate.py  ast_invariant_check.py  corestate_mutation_guard_check.py  filesystem_enforcement.py  import_graph_check.py  kernel_boundary_check.py  mutation_tracking_check.py  production_confluence_flags_check.py
dadbot/: __init__.py  agentic.py  api_models.py  app.py  app_runtime.py  assistant_runtime.py  background.py  cli.py  config.py  config_schema.py  constants.py  context.py  contracts.py  core_legacy.py  defaults.py  heritage_import.py  kernel_boundary.py  models.py  mood.py  notifications.py  pii_scrubber.py  profile.py  prompts.py  registry.py  relationship.py  runtime_adapter.py  state.py  streamlit_helpers.py  testing.py  tone.py  tool_registry_builder.py  typing.py
dadbot-hud/: README.md  index.html  package.json
dadbot-hud/src/: App.jsx  styles.css
dadbot/ui/: chat.py  (+14 more)
dadbot_system/: __init__.py  api.py  client.py  contracts.py  event_durability.py  event_tap.py  events.py  execution_timeline.py  graph_compression.py  graph_store.py  kernel.py  local_mcp_server.py  orchestration.py  runtime_signals.py  security.py  semantic_index.py  state.py  telemetry.py  worker.py
docker/: DEPLOYMENT.md  entrypoint.sh
docs/: ARCHIVE_POLICY.md  CURRENT_GOALPLAN.md  EXTERNAL_BENCHMARK_LOOP.md  KERNEL_CORE_CORRECTNESS_MATRIX.md  PRODUCTION_SPINE.md  RING0_ESSENTIAL_AUDIT.md  assistant_api_contract.md  confluence-law.md  explicit-execution-model.md  failure-model.md  policy_compiler_current_state.md  runtime-semantic-contract.md  system-level-explainability.md  system_contract_map.md
evaluation/: __init__.py  baselines.py  benchmark_registry.py  calibration_engine.py  coherence_engine.py  drift_detector.py  gold_set.py  memory_trace.py  normalizer.py  planner_trace.py  tool_trace.py  trace_schema.py
harness/: __init__.py
session_logs/: relational_ledger.jsonl
static/: dadbot-head-sync.html  dadbot-manifest.webmanifest  dadbot-ui.css
tests/: adversarial_stability_test.py  adversarial_test.py  benchmark_runner.py  benchmark_runner_v2.py  causal_graph_test.py  cognition_test.py  conflict_resolution_test.py  conftest.py  execution_replay_test.py  external_tool_runtime_test.py  layered_invariants_test.py  orchestrator_integration.py  persistence_test.py  phase41_guarantees_test.py  phase4_baselines.json  phase4_helpers.py  property_verification_test.py  run_phase4a.py  scenario_suite.py  scoring_engine.py  system_primitive_lock_test.py  system_snapshot_v0_test.py  system_snapshot_v1_test.py  test_adversarial_execution_coverage.py  test_agent_service_agent_loop.py  test_agentic_local_actions.py  test_agentic_methods.py  test_api_models_contract.py  test_app_runtime_startup.py  test_assistant_api_contract_enforcement.py  test_assistant_runtime_surface.py  test_bayesian_tool_gate.py  test_behavioral_ledger_week1.py  test_bitemporal_graph_edges.py  test_boundary_mutation_closure.py  test_checkpoint_tool_io_integration.py  test_confidence_gate.py  test_config_drift.py  test_contract_map_governance.py  test_contract_propagation_phase42.py  (+129 more)
tools/: _phase45_stress_run.py  arch_completeness_audit.py  architectural_shallow_audit.py  architecture_baseline_lock.json  architecture_gate.py  audit_runner.py  baseline_metrics.json  benchmark_cert_validator.py  cert_baseline_capture.py  ci_gate.py  collect_extended_shadow_batch.py  collect_p1_shadow_samples.py  complexity_baseline.json  complexity_diff_gate.py  complexity_gate.py  contract_guard.py  contract_guard_baseline.json  contract_test_compiler.py  create_system_snapshot_v0.py  dadbot_2026_compliance_stress.py  debug_restart_probe.py  enforce_no_bypass.py  execution_invariance_audit.py  external_benchmark_loop.py  finalize_recovery_baseline.py  full_system_audit.py  generate_dadbot_external_entry.py  generate_full_system_snapshot.py  god_class_audit.py  inspect_system.py  live_audit_attack.py  million_event_replay_stressor.py  normalize_competitor_entry.py  official_benchmark_runner.py  ownership_drift.py  phase4_certify.py  phase4_deterministic_replay_gate.py  phase4_launch_readiness_simulation.py  phase4_legacy_integrity_scan.py  phase4_static_audit.py  (+20 more)
(+668 files in other folders)
