[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dad-bot"
version = "0.1.0"
description = "Dad-Bot conversational assistant"
requires-python = ">=3.13"
dependencies = [
    "ollama",
    "orjson>=3.10",
    "pydantic>=2.0",
    "python-dateutil",
]

[project.scripts]
dadbot = "dadbot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
llm = [
    "litellm>=1.50.0",
]
service = [
    "cryptography>=43.0",
    "fastapi>=0.116",
    "uvicorn>=0.35",
    "redis>=6.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.2.4",
    "opentelemetry-api>=1.36",
    "opentelemetry-sdk>=1.36",
]
voice = [
    "faster-whisper>=1.1",
    "openai-whisper>=20231117",
    "pyttsx3>=2.98",
]
notifications = [
    "notifypy>=2.3",
    "plyer>=2.1",
]
heritage = [
    "Pillow>=10.0",
]
mcp = [
    "mcp>=1.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = [".", "tests"]
markers = [
    "integration: tests that hit external services or full-stack storage paths",
    "postgres: tests that require a live Postgres DSN",
    "adversarial: adversarial input and resilience tests (Phase 5 hardening)",
    "property_verification: property-based behavioral assertions (Phase 4/5)",
    "phase4: phase4 orchestration/certification domain tests",
    "durability: restart and persistence integrity checks",
    "phase4_cert: certification-grade phase4 evidence (no mocked orchestrator.handle_turn)",
    "phase4_harness: harness-grade phase4 checks (mocking/stubs allowed; excluded from certification scoring)",
    "soak: high-load or long-running stability checks",
    "stress: full-stack integration/stress tests — run with --run-stress",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Select the rule families worth enforcing:
#   E/W  pycodestyle errors/warnings
#   F    pyflakes (unused imports, undefined names)
#   I    isort
#   N    pep8-naming
#   UP   pyupgrade
#   B    flake8-bugbear
#   C4   flake8-comprehensions
#   BLE  blind-except (BLE001 — keep: real safety signal)
#   C90  mccabe complexity
#   PL   pylint
#   RUF  ruff-native rules
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "BLE", "C9", "PL", "RUF"]

# Rules deliberately suppressed:
#   ANN*  — type annotations (2,600+ issues; retrofitting is disproportionate)
#   D*    — docstrings (2,300+ issues; docstring sprint is a separate initiative)
#   EM*   — exception message style (cosmetic)
#   TRY003 — raise with long message (cosmetic)
#   SLF001 — private member access (legitimate in tests)
#   PLR2004 — magic value comparison (too many legitimate constants)
#   PLC0415 — import-outside-top-level (pattern used for lazy loading)
ignore = [
    "ANN001", "ANN002", "ANN003",
    "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D201", "D202", "D203", "D204", "D205", "D206", "D207",
    "D208", "D209", "D210", "D211", "D212", "D213", "D300", "D400",
    "D401", "D402", "D403", "D404", "D405", "D406", "D407", "D408",
    "D409", "D410", "D411", "D412", "D413", "D414", "D415", "D416",
    "D417", "D418", "D419",
    "EM101", "EM102",
    "TRY003",
    "PLR2004",
    "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately access private members and use magic values
"tests/**" = ["SLF001", "PLR2004", "BLE001", "PLR0913"]
"tools/**" = ["SLF001", "PLR2004", "BLE001"]
